force-app/main/default/objects/trailheadapp__User_Trailmix__c/trailheadapp__User_Trailmix__c.object-meta.xml
<CustomObject>
    <description>Maintains user assignments and follows for trailmixes.</description>
    <label>User Trailmix</label>
    <nameField>
        <displayFormat>UTM-{0000}</displayFormat>
        <label>User Trailmix ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Trailmixes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>