force-app/main/default/objects/trailheadapp__User_Trailmix__c/fields/trailheadapp__External_Id__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>