force-app/main/default/objects/trailheadapp__User_Trailmix__c/fields/trailheadapp__First_Attempted_At__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__First_Attempted_At__c</fullName>
    <label>First Attempted</label>
    <type>DateTime</type>
</CustomField>