force-app/main/default/objects/trailheadapp__User_Trailmix__c/fields/trailheadapp__Status__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Status__c</fullName>
    <description>Two types of status, &quot;In Progress&quot;, or &quot;Completed&quot; are available to represent the status of a user&apos;s trailmix. While we always expect a value, this is not a required field to enable FLS for trailmix assigners.</description>
    <inlineHelpText>Two types of status, &quot;In Progress&quot;, or &quot;Completed&quot; are available to represent the status of a user&apos;s trailmix.</inlineHelpText>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>