force-app/main/default/objects/trailheadapp__User_Trailmix__c/fields/trailheadapp__Trailmix__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Trailmix__c</fullName>
    <label>Trailmix</label>
    <referenceTo>trailheadapp__Trailmix__c</referenceTo>
    <relationshipLabel>User Trailmixes</relationshipLabel>
    <relationshipName>User_Trailmixes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>