force-app/main/default/objects/trailheadapp__User_Trailmix__c/fields/trailheadapp__User__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Trailmixes</relationshipName>
    <type>Lookup</type>
</CustomField>